--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ before_install:
   - git submodule update --init --remote --recursive
 install:
   - pip install markdown pelican ghp-import
-  - git clone https://github.com/getpelican/pelican-plugins
+  - git clone --recursive https://github.com/getpelican/pelican-plugins
 script:
   - make publish github
 env:
