--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,10 @@ before_install:
 install:
   - pip install markdown pelican ghp-import
   - git clone --recursive https://github.com/getpelican/pelican-plugins
+after_script:
+  - git config credential.helper "store --file=.git/credentials"
+  - echo "https://${GH_TOKEN}:@github.com" > .git/credentials
+  - node ./node_modules/grunt-cli/bin/grunt release
 script:
   - make publish github
 env:
